[package]
name = "pallet-evm"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME EVM contracts pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { default-features = false, path = "../../../../frame/balances" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
fp-evm = { version = "0.8.0", default-features = false, path = "../../primitives/evm" }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
evm = { version = "0.25.0", default-features = false, features = ["with-codec"] }
evm-runtime = { version = "0.25.0", default-features = false }
evm-gasometer = { version = "0.25.0", default-features = false }
sha3 = { version = "0.8", default-features = false }
pallet-account-service = { default-features = false, git = "https://github.com/mathwallet/MathChain.git", branch = "develop"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"fp-evm/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"pallet-account-service/std",
]
